--- a/.env
+++ b/.env
@@ -80,3 +80,11 @@ AIRFLOW_UID=1000
 AIRFLOW_GID=0
 AIRFLOW_UID=1000
 AIRFLOW_GID=0
+AIRFLOW_UID=1000
+AIRFLOW_GID=0
+AIRFLOW_UID=1000
+AIRFLOW_GID=0
+AIRFLOW_UID=1000
+AIRFLOW_GID=0
+AIRFLOW_UID=1000
+AIRFLOW_GID=0
