Update script to solve Docker concurrency issue

--- a/.env
+++ b/.env
@@ -88,3 +88,19 @@ AIRFLOW_UID=1000
 AIRFLOW_GID=0
 AIRFLOW_UID=1000
 AIRFLOW_GID=0
+AIRFLOW_UID=1000
+AIRFLOW_GID=0
+AIRFLOW_UID=1000
+AIRFLOW_GID=0
+AIRFLOW_UID=1000
+AIRFLOW_GID=0
+AIRFLOW_UID=1000
+AIRFLOW_GID=0
+AIRFLOW_UID=1000
+AIRFLOW_GID=0
+AIRFLOW_UID=1000
+AIRFLOW_GID=0
+AIRFLOW_UID=1000
+AIRFLOW_GID=0
+AIRFLOW_UID=1000
+AIRFLOW_GID=0
